[gd_scene load_steps=4 format=3 uid="uid://c8kuoxhktv6qn"]

[ext_resource type="Script" uid="uid://blvmhjngbihis" path="res://scripts/shop.gd" id="1_t4md6"]
[ext_resource type="Texture2D" uid="uid://cjxgqp145mcv3" path="res://assets/Blank.png" id="2_cimqq"]
[ext_resource type="Texture2D" uid="uid://cmrbd4nxfktem" path="res://assets/Black_Box.png" id="3_yltc6"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4md6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 328.0
offset_top = 87.49
offset_right = 790.0
offset_bottom = 115.49
bbcode_enabled = true
text = "[color=orange][b][font_size=20]REMU"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
justification_flags = 0

[node name="SearchBar" type="LineEdit" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 65.0
offset_top = -1.345
offset_right = 307.0
offset_bottom = 29.655
placeholder_text = "police hat"

[node name="SearchButton" type="Button" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 317.0
offset_top = 0.654999
offset_right = 345.0
offset_bottom = 27.655

[node name="ShoppingCartButton" type="Button" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 351.0
offset_top = 0.654999
offset_right = 379.0
offset_bottom = 27.655

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 328.0
offset_top = 119.0
offset_right = -444.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ErrorMessage" type="TextureRect" parent="CanvasLayer/ScrollContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("2_cimqq")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/ScrollContainer/VBoxContainer/ErrorMessage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[color=Red][font_size=30] We are terribly sorry but we have no items of that name in stock"
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 0

[node name="Revolver" type="TextureRect" parent="CanvasLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("2_cimqq")

[node name="RevolverPicture" type="TextureRect" parent="CanvasLayer/ScrollContainer/VBoxContainer/Revolver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_yltc6")

[node name="Description" type="RichTextLabel" parent="CanvasLayer/ScrollContainer/VBoxContainer/Revolver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[color=black][font_size=10]OMG! Look at this Fantastic Revolver! buy now for the Fantastic opportunity to have this Fantastic Revolver! It has like a spinny cylinder in it, that mean's it is very good and useful."
scroll_active = false

[node name="Buy_Revolver" type="Button" parent="CanvasLayer/ScrollContainer/VBoxContainer/Revolver"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -92.0
offset_right = -3.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "BUY NOW!!!"

[node name="Sale_Amount" type="RichTextLabel" parent="CanvasLayer/ScrollContainer/VBoxContainer/Revolver"]
layout_mode = 0
offset_left = 2.0
offset_top = 174.0
offset_right = 103.0
offset_bottom = 200.0
bbcode_enabled = true
text = "[rainbow freq=1.0 sat=0.8 val=0.8 speed=1.0][wave amp=50.0 freq=5.0 connected=1]90.51% off !!!"
scroll_active = false

[node name="Name" type="Label" parent="CanvasLayer/ScrollContainer/VBoxContainer/Revolver"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Revolver"

[node name="Sniper" type="TextureRect" parent="CanvasLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("2_cimqq")

[node name="SniperPicture" type="TextureRect" parent="CanvasLayer/ScrollContainer/VBoxContainer/Sniper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_yltc6")

[node name="Description" type="RichTextLabel" parent="CanvasLayer/ScrollContainer/VBoxContainer/Sniper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[color=black][font_size=10]Wow! Look at this amazing Sniper! buy now for an amazing oportunity to own this amazing Sniper! it is really good and handy and helpful! and above all really really cheap!"
scroll_active = false

[node name="Buy_Sniper" type="Button" parent="CanvasLayer/ScrollContainer/VBoxContainer/Sniper"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -92.0
offset_right = -3.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "BUY NOW!!!"

[node name="Sale_Amount" type="RichTextLabel" parent="CanvasLayer/ScrollContainer/VBoxContainer/Sniper"]
layout_mode = 0
offset_left = 2.0
offset_top = 174.0
offset_right = 101.0
offset_bottom = 200.0
bbcode_enabled = true
text = "[rainbow freq=1.0 sat=0.8 val=0.8 speed=1.0][wave amp=50.0 freq=5.0 connected=1]93.59% off !!!"
scroll_active = false

[node name="Name" type="Label" parent="CanvasLayer/ScrollContainer/VBoxContainer/Sniper"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Sniper"

[node name="Shotgun" type="TextureRect" parent="CanvasLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("2_cimqq")

[node name="ShotgunPicture" type="TextureRect" parent="CanvasLayer/ScrollContainer/VBoxContainer/Shotgun"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_yltc6")

[node name="Description" type="RichTextLabel" parent="CanvasLayer/ScrollContainer/VBoxContainer/Shotgun"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[color=black][font_size=10]Holy Shizzknuckles! Look at this Wonderful Shotgun! buy now for an amazing opportunity to grab this Wonderful Shotgun! it has like a pump on it and really packs a punch! Buy Now to save big!"
scroll_active = false

[node name="Buy_Shotgun" type="Button" parent="CanvasLayer/ScrollContainer/VBoxContainer/Shotgun"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -92.0
offset_right = -3.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "BUY NOW!!!"

[node name="Sale_Amount" type="RichTextLabel" parent="CanvasLayer/ScrollContainer/VBoxContainer/Shotgun"]
layout_mode = 0
offset_left = 2.0
offset_top = 174.0
offset_right = 101.0
offset_bottom = 200.0
bbcode_enabled = true
text = "[rainbow freq=1.0 sat=0.8 val=0.8 speed=1.0][wave amp=50.0 freq=5.0 connected=1]96.38% off !!!"
scroll_active = false

[node name="Name" type="Label" parent="CanvasLayer/ScrollContainer/VBoxContainer/Shotgun"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Shotgun"

[connection signal="pressed" from="CanvasLayer/Title/SearchButton" to="." method="_on_search_button_pressed"]
